--- a/stylesheets/css/ie_custom.css
+++ b/stylesheets/css/ie_custom.css
@@ -1,3 +1,4 @@
+.font-size-xxx-large{font-size:38px;line-height:47px;}
 .font-size-xx-large{font-size:28px;line-height:35px;}
 .font-size-x-large{font-size:24px;line-height:32px;}
 .font-size-large{font-size:20px;line-height:30px;}
@@ -5,12 +6,12 @@
 .font-size-small{font-size:13px;line-height:19px;}
 .font-size-x-small{font-size:11px;line-height:14px;}
 .font-size-xx-small{font-size:10px;line-height:12px;}
-.default-shadow{-moz-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.25);-webkit-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.25);box-shadow:0px 0px 8px rgba(18, 7, 6, 0.25);}
+.default-shadow{-moz-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);-webkit-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);box-shadow:0px 0px 8px rgba(18, 7, 6, 0.3);}
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
 #post_footer .item-0{clear:left;width:190px;}
 #post_footer .item-2{margin-right:0 !important;}
-#follow_list{background:#ff1e00;}
+#follow_list{background:#ea0000;}
 #work_pullout{background:#5d504f;}
 #categories_pullout{background:#5d504f;}
