--- a/stylesheets/less/global.less
+++ b/stylesheets/less/global.less
@@ -5,11 +5,6 @@
 	::-moz-selection  { background: @color_midtone none; color:@color_highlight; /* Firefox */ }
 	/*-webkit-font-smoothing: antialiased;*/
 	img { -ms-interpolation-mode: bicubic; }
-
-	p img:first-child {
-		margin-top: -5px;
-		margin-bottom: 5px;
-	}
 	
 	small { font-size:10px; }
 
@@ -40,13 +35,13 @@
 	#page_heel { background:@color_dark; }
 
 	a {
-		color: @color_accent_alt;
+		color: @color_accent;
 		text-decoration:underline;
 		text-decoration:none;
 		img { border: none; }
 	}
 	a.external { text-decoration: none; border-bottom: 1px dotted @color_midtone; }
-	a:hover { color: @color_accent; }
+	a:hover { color: @color_accent_alt; }
 	a.external:hover { text-decoration: none; border-bottom: 1px dotted @color_dark; }
 	a:visited { }
 
@@ -73,33 +68,35 @@
 		}
 	}
 
-	blockquote {
-		margin: @row-height 0px;
-		padding: 0;
-		font-size:@medium;
-		line-height: @row-height*2;
-		color:@color_midtone;
-		blockquote {
-			margin-top:0;
-		}
-		p {
-			font-size:@medium;
-			line-height: @row-height*2;
-		}
-		cite {
-			font-size:@x-small;
-		}
-		cite:before {
-			content:"— ";
-		}
+	cite {
+		margin-left:@gutter-width;
+		font-size:@small;
+		font-family:@sans-serif;
+	}
+	cite:before {
+		content:"— ";
 	}
 
-	blockquote:before,blockquote:after,q:before,q:after { content: ""; }
-	blockquote,q { quotes: "" ""; }
-	blockquote:first-child, blockquote p:first-child { margin-top: 0; }
-	blockquote:last-child, blockquote p:last-child { margin-bottom:0; }
+	blockquote,q { quotes: '„' '“'; }
+	
+	blockquote {
+		margin-left:@gutter-width;
+		color:@color_dark;
+		p {
+			font-size:inherit;
+			line-height:inherit;
+			margin-top:0;
+		}
+		p:first-child:before {
+			content: "“"; 
+		}
+		p:last-child:after {
+			content: "”"; 
+		}
+	} 
 
 	p {
+		margin:1em 0;
 		.font-size-x-small; 
 	}
 	p:first-child { margin-top: 0; }
@@ -185,8 +182,9 @@
 			.reset-dimensions;
 			float:left;
 			background:none;
-			margin-right:20px;
+			margin-right:15px;
 			.font-size-small;
+			
 		}
 		li.last {
 			margin-right:0;
@@ -253,6 +251,11 @@
 	
 	
 	#content.home, #content.archive {
+		
+		article {
+			margin:@row-height*3 0;
+		}
+		
 		article:first-child {
 			margin-top:@row-height;
 		}
