--- a/stylesheets/less/custom.less
+++ b/stylesheets/less/custom.less
@@ -220,6 +220,7 @@
 					background:@color_highlight;
 				}
 				a {
+					.reset-dimensions;
 					background:@color_light;
 					position:relative;
 					width:45px;
