--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -29,3 +29,9 @@ nav li.rss, nav li.twitter {
 		-o-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0);
 	}
 }
+
+#comment_form_comment textarea {
+	-webkit-transition: height .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: height .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: height .5s cubic-bezier(0.02, 0, 0.18, 1.0);
+}
