More cleanups and improvements. Implemented Jon Christophers admin options to the index template.

--- a/stylesheets/less/comments.less
+++ b/stylesheets/less/comments.less
@@ -132,7 +132,7 @@
 			header {
 				margin-bottom: @row-height;
 				h1 {
-					.font-size-large;
+					.font-size-medium;
 				}
 
 				.loggedin {
