--- a/stylesheets/less/global.less
+++ b/stylesheets/less/global.less
@@ -53,7 +53,7 @@
 	.metadata a { color:@color_midtone; text-decoration:none; }
 	.metadata a:hover { color:@color_off_black; }
 	
-	h1, h2, h3, h4, h5, h6 { font-family:@sans-serif; }
+	h1, h2, h3, h4, h5, h6 { font-family:@sans-serif; font-weight:normal; }
 	h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child { margin-top: 0; }
 	h1 { .font-size-x-large; padding-top: 6px; margin-bottom: @row-height; }
 	h2 { .font-size-large; padding-top: 0px; margin-bottom: @row-height; }
@@ -180,15 +180,19 @@
 		.reset-dimensions;
 		margin-top:@row-height;
 		list-style:none;
+		background:@color_light;
+		padding:4px 10px;
+		border-radius:5px;
+		display:inline-block;
 		li {
 			.reset-dimensions;
 			float:left;
 			background:none;
-			margin-right:20px;
+			margin-right:15px;
 			.font-size-small;
 			
 		}
-		li.last {
+		li.last, li:last-child {
 			margin-right:0;
 		}
 		
@@ -223,7 +227,7 @@
 			header {
 				margin-bottom:@row-height;
 				h1 {
-					font-size:@medium;
+					font-size:@large;
 					font-weight:@medium;
 					line-height:@row-height*2;
 				}
@@ -265,47 +269,15 @@
 		}
 	}
 	
-
 	.pagination {
-		margin:@row-height 0;
-		.next, .previous {
-			a {
-				display:block;
-				text-decoration:none; 
-				background:@color_light; 
-				padding:4px 6px 3px 6px; 
-				color:@color_off_black; 
-				border-radius:2px;
-				margin-top:@row-height;
-				.font-size-small;
-			}	
-			a:hover {
-				background:@color_midtone; 
-				color:@color_highlight;
-			}
-		}
-		.previous {
-			text-align:right;
-		}	
-	}
-
-	.page-links {
-		margin:@row-height 0 @row-height+5 0;
-		padding:5px 0;
-		word-spacing:5px;
+		margin:@row-height*2 0;
+		.font-size-small;
 		a {
-			padding:4px 8px;
-		
-			text-decoration:none;
-			word-spacing:0;
-		}
-		a:hover { 
-			background:@color_midtone; 
-			color:@color_highlight;
-			
+			margin-right:@gutter-width;
+			.columns(2, -20);
 		}
 	}
-	
+		
 	.button {
 		display:inline-block;
 		background:@color_dark;
