--- a/admin/css/franklin-street-options.css
+++ b/admin/css/franklin-street-options.css
@@ -12,10 +12,11 @@ a.franklin-content-section-delete { position:absolute; top:25px; right:25px; }
 
 .franklin-fields { width:320px; float:left; }
 .franklin-fields label { display:block; margin-bottom:3px; }
-.franklin-fields input,
-.franklin-fields textarea { width:275px; margin-bottom:13px; }
-.franklin-fields textarea { height:125px; }
+#franklin-content-sections .franklin-fields input,
+#franklin-content-sections .franklin-fields textarea { width:275px; margin-bottom:13px; }
+#franklin-content-sections .franklin-fields textarea { height:125px; }
 
+#franklin-general textarea { display:block; width: 550px; height:250px; margin-bottom:13px; }
 
 .franklin-categories { width:320px; float:left; }
 .franklin-categories p { font-weight:bold; }
