--- a/stylesheets/less/forms.less
+++ b/stylesheets/less/forms.less
@@ -1,5 +1,11 @@
 @import "variables";
 @media screen, projection {
+	label {
+		font-family: @sans-serif;
+		.font-size-small;
+		font-weight:bold;
+	}
+	
 	input[type=text], textarea {
 		.font-size-small;
 		border: 1px solid @color_midtone;
@@ -8,9 +14,15 @@
 	}
 
 	input[type=submit] {
-		.font-size-small;
+		display:inline-block;
+		background:@color_dark;
+		color:@color_light;
+		.default-shadow;
+		padding:4px 10px;
+		border-radius:5px;
+		font-family:@sans-serif;
+		text-align:center;
 		border:0;
-		padding:6px 10px 6px 10px;
-		cursor: pointer;
+		text-shadow:0px 1px 1px rgba(18, 7, 6,0.3);
 	}
 }
