--- a/stylesheets/less/variables.less
+++ b/stylesheets/less/variables.less
@@ -1,5 +1,5 @@
 @color_accent: 			#ea0000;
-@color_highlight: 		#fdfcfc;
+@color_highlight: 		#fffefe;
 @color_light: 			#f0eceb;
 @color_midtone: 		#5d504f;
 @color_dark: 			#3d302f;
