--- a/stylesheets/css/ie.css
+++ b/stylesheets/css/ie.css
@@ -19,7 +19,7 @@
 #sub_header .item-3,#sub_header .item-7,#sub_header .item-11{margin-right:0;}
 #post_footer .item-0,#post_footer .item-4,#post_footer .item-8{clear:left;width:330px;}
 #post_footer .item-3,#post_footer .item-7,#post_footer .item-11{margin-right:0;}
-#sidebar{background:#fdfcfc;}
+#sidebar{background:#fffefe;}
 #sticky_footer{background:#3d302f;}
 #sticky_footer.light{background:#f0eceb;}
 .clear:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0;}
