--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -35,3 +35,17 @@ nav li.rss, nav li.twitter {
 	-moz-transition: height .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-o-transition: height .5s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
+
+.slideshow .srd_slide {
+	-webkit-transition-property: opacity;
+	-webkit-transition-duration: .5s;
+	-webkit-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
+
+	-moz-transition-property: opacity;
+	-moz-transition-duration: .5s;
+	-moz-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
+	
+	-o-transition-property: opacity;
+	-o-transition-duration: .5s;
+	-o-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
+}
