Minor changes prior to final push
Still not ready for public use. Layout improvements, compatibility pass
and finalizing functionality about to come.

--- a/stylesheets/less/custom.less
+++ b/stylesheets/less/custom.less
@@ -297,7 +297,7 @@
 	/*footer hcard*/
 	#text-8 {
 		padding-left: (@column-width*3) + (@gutter-width*3);
-		margin-top:@row-height;
+		margin-top:0;
 		.org, .email, .adr, .tags {
 			display:none;
 		}
