--- a/stylesheets/less/global.less
+++ b/stylesheets/less/global.less
@@ -290,8 +290,10 @@
 		}
 	}
 	
-	#content.page article img {
-		.drop-shadow(0,0,0);
+	#content.page article section img {
+		-moz-box-shadow: none !important;
+		-webkit-box-shadow: none !important;
+		box-shadow: none !important;
 	}
 	
 	
